--- a/wsgi/style.css
+++ b/wsgi/style.css
@@ -1,3 +1,67 @@
+
+@font-face {
+	font-family: 'ComfortaaThin';
+	src: url('fonts/Comfortaa_Thin-webfont.eot');
+	src:	url('fonts/Comfortaa_Thin-webfont.ttf') format('truetype'), 
+		url('fonts/Comfortaa_Thin-webfont.svg#webfontReo2lGxG') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'ComfortaaRegular';
+	src: url('fonts/Comfortaa_Regular-webfont.eot');
+	src:	url('fonts/Comfortaa_Regular-webfont.ttf') format('truetype'), 
+		url('fonts/Comfortaa_Regular-webfont.svg#webfontxbL3cos8') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'ComfortaaBold';
+	src: url('fonts/Comfortaa_Bold-webfont.eot');
+	src:	url('fonts/Comfortaa_Bold-webfont.ttf') format('truetype'), 
+		url('fonts/Comfortaa_Bold-webfont.svg#webfontjkcnhWWT') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'CantarellRegular';
+	src: url('fonts/Cantarell-Regular-webfont.eot');
+	src:	url('fonts/Cantarell-Regular-webfont.ttf') format('truetype'), 
+		url('fonts/Cantarell-Regular-webfont.svg#webfontPQ4tPnyo') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'CantarellBold';
+	src: url('fonts/Cantarell-Bold-webfont.eot');
+	src:	url('fonts/Cantarell-Bold-webfont.ttf') format('truetype'), 
+		url('fonts/Cantarell-Bold-webfont.svg#webfont3gCLDhwY') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'CantarellBoldOblique';
+	src: url('fonts/Cantarell-BoldOblique-webfont.eot');
+	src:	url('fonts/Cantarell-BoldOblique-webfont.ttf') format('truetype'), 
+		url('fonts/Cantarell-BoldOblique-webfont.svg#webfont3gCLDhwY') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'CantarellOblique';
+	src: url('fonts/Cantarell-Oblique-webfont.eot');
+	src:	url('fonts/Cantarell-Oblique-webfont.ttf') format('truetype'), 
+		url('fonts/Cantarell-Oblique-webfont.svg#webfont3gCLDhwY') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 body, html {
     margin: 0;
     padding: 0;
@@ -6,7 +70,7 @@ body, html {
 body {
     background-color: #eeeeee;
     background-repeat: repeat-x;
-    font-family: 'Open Sans', 'Lucida Grande', helvetica, tahoma, verdana, sans-serif;
+    font-family: Cantarell, "Droid Sans", Verdana, sans-serif
 }
 
 .constraint {
@@ -87,7 +151,7 @@ body {
 }
     
 #header .headerstatus {
-    background: #9999bb;
+    background: #999999;
     padding: 10px 0 10px 0;
 }
 
