--- a/wsgi/style.css
+++ b/wsgi/style.css
@@ -236,6 +236,11 @@ body {
     clear: both;
 }
 
+a.servicelink {
+    text-decoration: none;
+    color: #333333;
+}
+
 #footer a {
     color: #555555;
 }
