Add changes.rss feed in same location with all outages
Signed-off-by: Ryan Lerch <rlerch@redhat.com>

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -7,9 +7,10 @@
 	<title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
 	<meta charset="utf-8" />
 	<meta http-equiv="refresh" content="60">
-	<link href="{{ SITEURL }}/feeds/ongoing.rss" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} ongoing outages RSS Feed" />
-	<link href="{{ SITEURL }}/feeds/planned.rss" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} planned outages RSS Feed" />
-	<link href="{{ SITEURL }}/feeds/resolved.rss" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} resolved outages RSS Feed" />
+	<link href="{{ SITEURL }}/ongoing.rss" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} ongoing outages RSS Feed" />
+	<link href="{{ SITEURL }}/planned.rss" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} planned outages RSS Feed" />
+	<link href="{{ SITEURL }}/resolved.rss" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} resolved outages RSS Feed" />
+	<link href="{{ SITEURL }}/changes.rss" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} all outages RSS Feed" />
 
 	<link href="{{ SITEURL }}/theme/fedora-bootstrap.css" type="text/css" rel="stylesheet" />
 	<link href="{{ SITEURL }}/theme/fedora-status.css" type="text/css" rel="stylesheet" />
