--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -12,11 +12,11 @@
 	<link href="{{ SITEURL }}/resolved.rss" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} resolved outages RSS Feed" />
 	<link href="{{ SITEURL }}/changes.rss" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} all outages RSS Feed" />
 
-	<link href="{{ SITEURL }}/theme/fedora-bootstrap.css" type="text/css" rel="stylesheet" />
-	<link href="{{ SITEURL }}/theme/fedora-status.css" type="text/css" rel="stylesheet" />
-	<link href="{{ SITEURL }}/theme/fonts/hack.css" type="text/css" rel="stylesheet" />
-	<link href="{{ SITEURL }}/theme/fonts/open-sans.css" type="text/css" rel="stylesheet" />
-	<link href="{{ SITEURL }}/theme/fonts/font-awesome.css" type="text/css" rel="stylesheet" />
+	<link href="/theme/fedora-bootstrap.css" type="text/css" rel="stylesheet" />
+	<link href="/theme/fedora-status.css" type="text/css" rel="stylesheet" />
+	<link href="/theme/fonts/hack.css" type="text/css" rel="stylesheet" />
+	<link href="/theme/fonts/open-sans.css" type="text/css" rel="stylesheet" />
+	<link href="/theme/fonts/font-awesome.css" type="text/css" rel="stylesheet" />
 	{% endblock head %}
 </head>
 
