--- a/theme/templates/resolved.html
+++ b/theme/templates/resolved.html
@@ -11,7 +11,7 @@
 				<div class="col">
 					<div class="d-flex align-items-center mt-5">
 						<h2 class="text-muted">Resolved Outages</h2>
-						<div class="ml-auto h4"><a href="{{ SITEURL }}/">view current outages &raquo;</a></div>
+						<div class="ml-auto h4"><a href="/">view current outages &raquo;</a></div>
 					</div>
 					<div class="list-group">
 						{% set lm = namespace(lastmonth="") %}
