--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -74,7 +74,7 @@
 							</div>
 						</div>
 						<div class="text-right h4 mt-4">
-							<a href="{{ SITEURL }}/resolved.html">view resolved outages &raquo;</a>
+							<a href="/resolved.html">view resolved outages &raquo;</a>
 						</div>	
 					</div>
 				</div>
