--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -68,7 +68,7 @@
 								<h3 class="card-title mb-0"><i class="fa fa-exclamation-triangle fa-fw mr-3"></i>{{outages['planned']|count}} Planned Outage{{'s' if outages['planned']|count != 1 }}</h3>
 							</div>
 							<div class="list-group list-group-flush">
-							{% for outage in outages['planned'] %}
+							{% for outage in outages['planned']|sort(attribute='date') %}
 								{{outageitem(outage, "Anticipated Start", "Anticipated End")}}
 							{% endfor %}
 							</div>
