--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -29,7 +29,10 @@
 				<div class="col-md-12">
 					<h2 class="display-4">Fedora Infrastructure Status</h2>
 					<p class="lead">
-						This is a <strong>manually updated</strong> list of known outages. If you are experiencing issues with a service that is not listed here, please <a class="font-weight-bold" href="https://docs.fedoraproject.org/en-US/cpe/day_to_day_fedora/">consult the documentation</a> to determine the best way to raise your issue.</a>.
+This is a <a class="font-weight-bold" href="https://docs.fedoraproject.org/en-US/infra/sysadmin_guide/status-fedora/">manually updated</a> list of known
+outages. If you are experiencing issues with a service that is not listed here, please
+<a class="font-weight-bold" href="https://docs.fedoraproject.org/en-US/cpe/day_to_day_fedora/">consult the documentation</a> to determine the best way to
+raise your issue.</a>.
 					</p>
 				</div>
 			  </div>
