--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -2,14 +2,14 @@
 
 {% macro outageitem(outage, starttitle, endtitle) -%}
 <div class="list-group-item">
-	<h3>{{outage.title}}</h3>
+	<h4 class="fw-bold">{{outage.title}}</h4>
 	<div>{{outage.content}}</div>
 	<div class="mb-3">For more information and updates on the progress of this outage, see <a href="{{TICKET_TRACKER_URL}}{{outage.ticket}}">ticket #{{outage.ticket}}</a> </div>
-	<h5>{{starttitle}}</h5>
+	<h6 class="fw-bold">{{starttitle}}</h6>
 	<div class="mb-2">
 		{{outage.date|formatdate}}
 	</div>
-	<h5>{{endtitle}}</h5>
+	<h6 class="fw-bold">{{endtitle}}</h6>
 	<div>
 		{% if outage.metadata.outagefinish %}
 			{{outage.metadata.outagefinish|parsedate|formatdate}}
@@ -23,7 +23,7 @@
 {% block content %}
 	{% set outages = categories | categories_dict %}
 	<div class="bodycontent">
-		<div class="alert-info border-bottom py-5">
+		<div class="bg-lightstyles-primary border-bottom border-lightstyles-primary text-lightstyles-primary py-5">
 			<div class="container section">
 			  <div class="row">
 				<div class="col-md-12">
@@ -45,7 +45,7 @@ raise your issue.</a>.
 					{% if outages['ongoing'] %}
 						<div class="card border-danger my-5 mx-auto">
 							<div class="card-header text-white bg-danger">
-								<h3 class="card-title mb-0"><i class="fa fa-exclamation-triangle fa-fw mr-3"></i>{{outages['ongoing']|count}} Ongoing Outage{{'s' if outages['ongoing']|count > 1 }}</h3>
+								<h4 class="card-title fw-bold mb-0"><i class="fa fa-exclamation-triangle fa-fw me-3"></i>{{outages['ongoing']|count}} Ongoing Outage{{'s' if outages['ongoing']|count > 1 }}</h4>
 							</div>
 							<div class="list-group list-group-flush">
 								{% for outage in outages['ongoing'] %}
@@ -55,20 +55,20 @@ raise your issue.</a>.
 						</div>
 					{% else %}
 						<div class="card text-white bg-success my-5 mx-auto">
-							<div class="card-header d-flex align-items-center pl-2">
+							<div class="card-header d-flex align-items-center ps-2">
 								<div>
-									<i class="fa fa-check-circle fa-3x fa-fw mr-2"></i>
+									<i class="fa fa-check-circle fa-3x fa-fw me-2"></i>
 								</div>
 								<div>
-									<h3 class="card-title mb-1">All Systems Operational</h3>
-									<div class="h5 mb-0">There are no known issues or outages in Fedora Infrastructure.</div>
+									<h4 class="card-title fw-bold mb-1">All Systems Operational</h4>
+									<div class="h6 fw-bold mb-0">There are no known issues or outages in Fedora Infrastructure.</div>
 								</div>
 							</div>
 						</div>
 					{% endif %}
 						<div class="card border-primary my-5 mx-auto">
 							<div class="card-header text-white {{'bg-primary' if outages['planned']|length > 0 else 'bg-secondary'}}">
-								<h3 class="card-title mb-0"><i class="fa fa-exclamation-triangle fa-fw mr-3"></i>{{outages['planned']|count}} Planned Outage{{'s' if outages['planned']|count != 1 }}</h3>
+								<h4 class="card-title fw-bold mb-0"><i class="fa fa-exclamation-triangle fa-fw me-3"></i>{{outages['planned']|count}} Planned Outage{{'s' if outages['planned']|count != 1 }}</h4>
 							</div>
 							<div class="list-group list-group-flush">
 							{% for outage in outages['planned']|sort(attribute='date') %}
@@ -76,7 +76,7 @@ raise your issue.</a>.
 							{% endfor %}
 							</div>
 						</div>
-						<div class="text-right h4 mt-4">
+						<div class="text-end h5 fw-bold mt-4">
 							<a href="/resolved.html">view resolved outages &raquo;</a>
 						</div>	
 					</div>
