--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -33,7 +33,7 @@
 				   <div class="col-sm-3 col-4 mt-3">
 					  <div>
 						 <dl>
-							<dt class="text-uppercase h4"><strong>About</strong></dt>
+							<dt class="text-uppercase h3">About</dt>
 							<dd><a href="https://getfedora.org/">Get Fedora Linux</a></dd>
 							<dd><a href="https://getfedora.org/en/sponsors/">Sponsors</a></dd>
 							<dd><a href="https://fedoramagazine.org">Fedora Magazine</a></dd>
@@ -44,7 +44,7 @@
 				   <div class="col-sm-3 col-4 mt-3">
 					  <div>
 						 <dl>
-							<dt class="text-uppercase h4"><strong>Support</strong></dt>
+							<dt class="text-uppercase h3">Support</dt>
 							<dd><a href="https://fedoraproject.org/wiki/Communicating_and_getting_help">Get Help</a></dd>
 							<dd><a href="https://ask.fedoraproject.org/">Ask Fedora</a></dd>
 							<dd><a href="https://fedoraproject.org/wiki/Common_F33_bugs">Common Bugs</a></dd>
@@ -55,7 +55,7 @@
 				   <div class="col-sm-3 col-4 mt-3">
 					  <div>
 						 <dl>
-							<dt class="text-uppercase h4"><strong>Community</strong></dt>
+							<dt class="text-uppercase h3">Community</dt>
 							<dd><a href="https://fedoraproject.org/wiki/Join">Join Fedora</a></dd>
 							<dd><a href="https://fedoraproject.org/wiki/Overview">About Fedora</a></dd>
 							<dd><a href="http://fedoraplanet.org">Planet Fedora</a></dd>
