--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -34,10 +34,10 @@
 					  <div>
 						 <dl>
 							<dt class="text-uppercase h3">About</dt>
-							<dd><a href="https://getfedora.org/">Get Fedora Linux</a></dd>
-							<dd><a href="https://getfedora.org/en/sponsors/">Sponsors</a></dd>
+							<dd><a href="https://fedoraproject.org/">Get Fedora Linux</a></dd>
+							<dd><a href="https://fedoraproject.org/en/sponsors/">Sponsors</a></dd>
 							<dd><a href="https://fedoramagazine.org">Fedora Magazine</a></dd>
-							<dd><a href="https://fedoraproject.org/wiki/Legal:Main#Legal">Legal</a></dd>
+							<dd><a href="https://docs.fedoraproject.org/en-US/legal/">Legal</a></dd>
 						 </dl>
 					  </div>
 				   </div>
@@ -45,9 +45,9 @@
 					  <div>
 						 <dl>
 							<dt class="text-uppercase h3">Support</dt>
-							<dd><a href="https://fedoraproject.org/wiki/Communicating_and_getting_help">Get Help</a></dd>
-							<dd><a href="https://ask.fedoraproject.org/">Ask Fedora</a></dd>
-							<dd><a href="https://fedoraproject.org/wiki/Common_F33_bugs">Common Bugs</a></dd>
+							<dd><a href="https://docs.fedoraproject.org/en-US/project/communications/">Get Help</a></dd>
+							<dd><a href="https://discussion.fedoraproject.org/c/ask/6/none">Ask Fedora</a></dd>
+							<dd><a href="https://discussion.fedoraproject.org/c/ask/common-issues/82/none">Common Issues</a></dd>
 							<dd><a href="https://developer.fedoraproject.org/">Fedora Developer Portal</a></dd>
 						 </dl>
 					  </div>
@@ -58,7 +58,7 @@
 							<dt class="text-uppercase h3">Community</dt>
 							<dd><a href="https://fedoraproject.org/wiki/Join">Join Fedora</a></dd>
 							<dd><a href="https://fedoraproject.org/wiki/Overview">About Fedora</a></dd>
-							<dd><a href="http://fedoraplanet.org">Planet Fedora</a></dd>
+							<dd><a href="https://docs.fedoraproject.org/en-US/project/">Planet Fedora</a></dd>
 							<dd><a href="https://accounts.fedoraproject.org/">Fedora Accounts</a></dd>
 						 </dl>
 					  </div>
